# stephen-embedding-model

./: encapsulation.py  model.py  model_weights.pth
bert/: main.py
bert/Embert/: .gitignore  agent-card.json  handler.ts  package-lock.json  package.json  trigger.ts
heater/: LICENSE  README.md  __init__.py  heater.py  pyproject.toml
heater/.github/workflows/: publish.yaml
heater/heater.egg-info/: PKG-INFO  SOURCES.txt
