[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heater-plot"
version = "0.1.5"
description = "PyTorch & NumPy Heatmap Visualizer for 1D Vectors and 2D Matrix Tensors"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Stephen Blum", email = "blum.stephen@gmail.com"},
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/stephenlb/heater"

[tool.setuptools]
py-modules = ["heater"]
